# Quote-Bot

./: credentials.json  main.py  pyproject.toml
